--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+    <!-- progress on course - next: https://www.youtube.com/watch?v=GWRvrSqnFbM -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
